raw-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"person-service:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"person-service\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: person-service
    app.kubernetes.io/component: person-service
    app.kubernetes.io/instance: person-service
  name: person-service
  namespace: book-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: person-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: person-service
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/book-dev/person-service:latest
        imagePullPolicy: IfNotPresent
        name: person-service
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
